fix(Settings): Form fields stretch to full width while large selects are kept from overflowing

--- a/src/containers/SettingsEditor/SettingsEditor.sass
+++ b/src/containers/SettingsEditor/SettingsEditor.sass
@@ -6,7 +6,6 @@ $field-gap: 8px
 .form-field
   flex-grow: 1
   width: 100%
-  max-width: 800px
 
 .form-inline-field-help, .form-object-field-help
   display: none
@@ -108,7 +107,6 @@ $field-gap: 8px
 
   .form-object-field-item
     display: contents
-    outline: solid 1px yellow
     div[data-hidden="true"]
       position: absolute
       visibility: hidden
@@ -119,7 +117,6 @@ $field-gap: 8px
         height: 0
         padding-top: 0
         padding-bottom: 0
-        outline: solid 1px red
     &:has(div[data-hidden="false"])
       position: relative
       visibility: visible
